# Scan-Tailor-Tool

./: README.md  pyproject.toml
apps/: Scantailor.docx
scantailor_tool/: pdf2jgp.py
